add new cryptos and change twitter scraper browser from chromium to firefox

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,8 +71,8 @@
     "        current_date += datetime.timedelta(days=1) # increment day by day\n",
     "\n",
     "\n",
-    "def print_all_sorted_posts(dataFrame):\n",
-    "    dataFrame=dataFrame.sort_values(by='posted_time',ascending=False)\n",
+    "def print_all_sorted_posts(dataFrame,sortingColumnName):\n",
+    "    dataFrame=dataFrame.sort_values(['datetime',sortingColumnName],ascending=[False,False])\n",
     "    dataFrame=add_readable_datetime(dataFrame)\n",
     "    return dataFrame\n",
     "\n",
@@ -174,9 +174,10 @@
     "Cardano(ADA)\n",
     "Cosmos(ATOM)\n",
     "Litecoin(LTC) *+\n",
-    "Chainlink(LINK) *+\n",
+    "Chainlink(LINK) \n",
     "Aave(AAVE)\n",
     "Polygon(MATIC)\n",
+    "Gas(GAS)\n",
     "```"
    ]
   },
@@ -201,7 +202,7 @@
    "outputs": [],
    "source": [
     "# upvote_ratio=1,post_score=2,num_comments=3\n",
-    "print_sorted_reddit_posts_acording_to_column(start_dateObj=datetime.date(2023,10,24),end_dateObj=datetime.date(2023,10,25),columnNumber=3)"
+    "print_sorted_reddit_posts_acording_to_column(start_dateObj=datetime.date(2023,11,1),end_dateObj=datetime.date(2023,11,1),columnNumber=3)"
    ]
   },
   {
@@ -227,7 +228,7 @@
    "outputs": [],
    "source": [
     "# likes=1,replies=2,views=3,retweets=4\n",
-    "print_sorted_twitter_posts_acording_to_column(start_dateObj=datetime.date(2023,10,24),end_dateObj=datetime.date(2023,10,25),columnNumber=2)"
+    "print_sorted_twitter_posts_acording_to_column(start_dateObj=datetime.date(2023,11,1),end_dateObj=datetime.date(2023,11,1),columnNumber=2)"
    ]
   },
   {
@@ -252,8 +253,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "startDateObject=datetime.date(2023,10,25)\n",
-    "endDateObject=datetime.date(2023,10,26)\n",
+    "startDateObject=datetime.date(2023,11,1)\n",
+    "endDateObject=datetime.date(2023,11,2)\n",
     "\n",
     "coinNames =[\n",
     "\"BTC\",\n",
@@ -277,9 +278,10 @@
     "\n",
     "for coinName in coinNames:\n",
     "    print(Style.BRIGHT+Back.RESET+Fore.MAGENTA+f\"\\n\\n\\n{coinName}\")\n",
-    "    print(\"Reddit Data\")\n",
+    "    print(\"Reddit Data\",end=Style.RESET_ALL+Back.RESET+Fore.RESET)\n",
     "    print_sentiment_anayled_piechart_of_coin(start_dateObj=startDateObject,end_dateObj=endDateObject,csvFilePath='data/reddit_data.csv',coinName=coinName)\n",
-    "    print(Style.BRIGHT+Back.MAGENTA+Fore.LIGHTCYAN_EX+\"twitter Data\")\n",
+    "    \n",
+    "    print(Style.BRIGHT+Back.RESET+Fore.MAGENTA+\"twitter Data\",end=Style.RESET_ALL+Back.RESET+Fore.RESET) \n",
     "    print_sentiment_anayled_piechart_of_coin(start_dateObj=startDateObject,end_dateObj=endDateObject,csvFilePath='data/twitter_data.csv',coinName=coinName)\n"
    ]
   }
